Introduce Generational ZGC to JDK documentation.
The generational ZGC allows ZGC itself to improve application performance by extending the Z garbage collector to maintain seperate generations for young and old objects which allows it to collect young objects which tend to end young more frequently.